Fix width of main content to avoid images overflowing element boundaries

--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,6 @@ a:hover {
 }
 
 #info, #content {
-	border: 1px solid black;
 	background-color: aliceblue;
 	padding: 5px;
 }
@@ -53,6 +52,7 @@ a:hover {
 }
 
 #content {
+	width: 810px;
 	margin-right: 230px;
 }
 
@@ -81,6 +81,10 @@ fieldset {
 	border-radius: 5px;
 	margin-top: 10px;
 	background-color: aliceblue;
+}
+
+img {
+	overflow: hidden;
 }
 
 .separate {
